--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <title>OpenBox</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
 
 <style>
   .logo {
@@ -391,7 +390,7 @@ button:active {
 <body>
    <header>
     
-<img src="https://image.noelshack.com/fichiers/2025/01/7/1736074619-openbox-2.png" class="logo"> 
+<img src="/fichiers/logo 2.png" class="logo"> 
 
    <div class="burger-menu" id="burgerMenu">
     <div class="line"></div>
