--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>OpenBox</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href='Fichiers/polices/Poppins-Light.tff' rel='stylesheet'>
+  <link href='Desktop\OpenBox\Fichiers\polices' rel='stylesheet'>
 
 <style>
   .logo {
