--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ header {
     }
 }
 body {
-    font-family: 'Poppins';font-size: 22px;
+    font-family: 'Poppins-Light';font-size: 22px;
     background-color: black;
     color: white;
     
@@ -440,7 +440,7 @@ button:active {
 
 </button>
 </div>
-<label>V2</label>
+
 </body>
 
 
