--- a/index.html
+++ b/index.html
@@ -143,7 +143,9 @@ header {
     }
 }
 body {
-    font-family: 'Poppins-Light';font-size: 22px;
+    font-family: 'Poppins'; 
+  font-size: 22px;
+    
     background-color: black;
     color: white;
     
