--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <link href='fichiers\Poppins-Light.tff' rel='stylesheet'>
 
 <style>
-  
   .logo {
     width: 150px; /* Réduit la taille du logo sur les petits écrans */
     height: auto;
@@ -144,9 +143,7 @@ header {
     }
 }
 body {
-    font-family: 'Poppins'; 
-  font-size: 22px;
-    
+    font-family: 'Poppins';font-size: 22px;
     background-color: black;
     color: white;
     
