--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>OpenBox</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href='fichiers\Poppins-Light.tff' rel='stylesheet'>
+<link rel="stylesheet" href="https://use.typekit.net/xwa0zel.css">
 
 <style>
   .logo {
