--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@ button:active {
    </header>
    <div class="content">
   <h1>Les savoirs sont ici et ils ne possèdent pas de prix.</h1>
-<h3>Retrouver des astuces, des alternatives libre ou gratuites, des tutoriels et bien plus encore.</h3>
+<h3>Retrouver des astuces, des alternatives libres ou gratuites, des tutoriels et bien plus encore.</h3>
 <br>
 
 <button onclick="window.location.href = '/savoir';">Cliquez Ici
