--- a/savoir.html
+++ b/savoir.html
@@ -239,7 +239,7 @@ header {
 <body>
    <header>
     
-<img src="https://image.noelshack.com/fichiers/2025/01/7/1736074619-openbox-2.png" class="logo"> 
+<img src="/fichiers/logo 2.png" class="logo"> 
 
    <div class="burger-menu" id="burgerMenu">
     <div class="line"></div>
