--- a/index.html
+++ b/index.html
@@ -424,8 +424,8 @@ button:active {
     <ul>
       <li><a href="/index.html">Accueil</a></li>
       <li><a href="/savoir.html">Savoir</a></li>
-      <li><a href="#">À propos</a></li>
-      <li><a href="#">Contact</a></li>
+      <li><a href="/about.html">À propos</a></li>
+      <li><a href="/contact.html">Contact</a></li>
       <li><a href="#">Soutenir</a></li>
     </ul>
   </nav>
