--- a/contact.html
+++ b/contact.html
@@ -270,10 +270,10 @@ header {
   <!-- Menu de navigation -->
   <nav id="navMenu" class="nav-menu">
     <ul>
-      <li><a href="/index.html">Accueil</a></li>
+        <li><a href="/index.html">Accueil</a></li>
       <li><a href="/savoir.html">Savoir</a></li>
-      <li><a href="#">À propos</a></li>
-      <li><a href="#">Contact</a></li>
+      <li><a href="/about.html">À propos</a></li>
+      <li><a href="/contact.html">Contact</a></li>
       <li><a href="#">Soutenir</a></li>
     </ul>
   </nav>
