--- a/contact.html
+++ b/contact.html
@@ -280,7 +280,7 @@ header {
    </header>
    <div class="content">
   <h1>Contactez-Nous</h1>
-<h3>Adresse Mail: mailto:contact.openbox@proton.me</h3>
+<h3>Adresse Mail: contact.openbox@proton.me</h3>
 
 </div>
 
