--- a/savoir.html
+++ b/savoir.html
@@ -274,7 +274,7 @@ header {
       <li><a href="/savoir.html">Savoir</a></li>
       <li><a href="/about.html">À propos</a></li>
       <li><a href="/contact.html">Contact</a></li>
-      <li><a href="#">Soutenir</a></li>
+      <li><a href="/soutenir">Soutenir</a></li>
     </ul>
   </nav>
    </header>
