--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
-
+  <link rel="icon" href "/fichiers/logo 2.png">
 <style>
   .logo {
     width: 150px; /* Réduit la taille du logo sur les petits écrans */
