--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <title>OpenBox</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
+<link rel="stylesheet" href="https://use.typekit.net/xwa0zel.css">
   <link rel="icon" href "/fichiers/logo 2.png">
 <style>
   .logo {
