--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="https://use.typekit.net/xwa0zel.css">
-  <link rel="icon" href "/fichiers/logo 2.png">
+  <link rel="icon" href "https://image.noelshack.com/fichiers/2025/02/6/1736632434-logo.png">
 
 <style>
   .logo {
