--- a/index.html
+++ b/index.html
@@ -442,7 +442,11 @@ button:active {
 
 </button>
 </div>
-
+<footer>
+  <ul>
+    <li> a href="/privacy.html" Politique de confidentialité</li>
+    <li> a href="/contact.html" Contactez-nous </li>
+    <ul>
 </body>
 
 
