--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@ button:active {
 </div>
 <footer>
   <ul>
-    <li> a href="/privacy.html" Politique de confidentialité</li>
+    <li> a href="/privacy.html" Politique de confidentialité</a></li>
     <li> a href="/contact.html" Contactez-nous </li>
     <ul>
 </body>
