--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@ button:active {
 <footer>
   <ul>
     <li> a href="/privacy.html" Politique de confidentialité</a></li>
-    <li> a href="/contact.html" Contactez-nous </li>
+    <li> a href="/contact.html" Contactez-nous </a></li>
     <ul>
 </body>
 
