--- a/index.html
+++ b/index.html
@@ -444,9 +444,9 @@ button:active {
 </div>
 <footer>
   <ul>
-    <li> a href="/privacy.html" Politique de confidentialité</a></li>
-    <li> a href="/contact.html" Contactez-nous </a></li>
-    <ul>
+      <li><a href="/privacy.html">Poltique de confidentialité </a></li>
+    <li> <a href="/contact.html"> Contactez-nous> </a></li>
+    </ul>
 </body>
 
 
