--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
 
 <style>
+.footer {
+  background-color: #333;
   .logo {
     width: 150px; /* Réduit la taille du logo sur les petits écrans */
     height: auto;
