--- a/index.html
+++ b/index.html
@@ -453,6 +453,7 @@ button:active {
       <li><a href="/privacy.html">Poltique de confidentialité </a></li>
     <li> <a href="/contact.html"> Contactez-nous </a></li>
     </ul>
+    </footer>
 </body>
 
 
