--- a/index.html
+++ b/index.html
@@ -395,11 +395,12 @@ button:active {
     color: white; /* Couleur du texte blanc */
     padding: 20px 0; /* Espacement interne */
     text-align: center; /* Centrer le texte */
+  font-size: 10px; 
 }
 
 /* Style du contenu du footer */
 .footer-content {
-    max-width: 1200px; /* Largeur maximale du contenu */
+    max-width: 1111200px; /* Largeur maximale du contenu */
     margin: 0 auto; /* Centrer le contenu */
     display: flex; /* Utiliser flexbox pour aligner les éléments */
     justify-content: space-between; /* Espacer les éléments */
