--- a/index.html
+++ b/index.html
@@ -501,11 +501,11 @@ button:active {
         <div class="footer-content">
             <nav class="footer-nav">
                 <ul>
-                    <li><a href="#">Politique de confidentialité</a></li>
-                    <li><a href="#">À propos</a></li>
-                    <li><a href="#">Contact</a></li>
-                  <li><a href="#">GitHub</a></li>
-                  <li><a href="#">BlueSky</a></li>
+                    <li><a href="/privacy.html">Politique de confidentialité</a></li>
+                    <li><a href="/about.html">À propos</a></li>
+                    <li><a href="/contact.html">Contact</a></li>
+                  <li><a href="https://github.com/arreadev/openbox">GitHub</a></li>
+                  <li><a href="https://bsky.app/profile/open-box.bsky.social">BlueSky</a></li>
     
                 </a>
             </div>
