--- a/savoir.html
+++ b/savoir.html
@@ -280,8 +280,36 @@ header {
    </header>
    <div class="content">
   <h1>Bientôt</h1>
+     
 <h3></h3>Page en cours de création.</h3>
 
 </div>
-
+<br>
+  <br>
+    <br>
+      <br>
+        <br>
+          <br>
+  <br>
+  <br>
+    <br>
+      <br>
+        <br>
+          <br>
+   <footer class="footer">
+        <div class="footer-content">
+            <nav class="footer-nav">
+                <ul>
+                    <li><a href="/privacy.html">Politique de confidentialité</a></li>
+                    <li><a href="/about.html">À propos</a></li>
+                    <li><a href="/contact.html">Contact</a></li>
+                  <li><a href="https://github.com/arreadev/openbox">GitHub</a></li>
+                  <li><a href="https://bsky.app/profile/open-box.bsky.social">BlueSky</a></li>
+    
+                </a>
+            </div>
+                </ul>
+            </nav>
+        </div>
+    </footer>
 </body>
