--- a/about.html
+++ b/about.html
@@ -286,7 +286,9 @@ header {
 </button>
        <button onclick="window.location.href = 'https://github.com/arreadev/openbox';">GitHub
 </button>
-
+</button>
+       <button onclick="window.location.href = 'https://github.com/arreadev/openbox';">Wiki
+</button>
 
 </div>
 
