--- a/about.html
+++ b/about.html
@@ -287,7 +287,7 @@ header {
        <button onclick="window.location.href = 'https://github.com/arreadev/openbox';">GitHub
 </button>
 </button>
-       <button onclick="window.location.href = 'https://github.com/arreadev/openbox';">Wiki
+       <button onclick="window.location.href = 'https://github.com/arreadev/openbox/wiki';">Wiki
 </button>
 
 </div>
