--- a/savoir.html
+++ b/savoir.html
@@ -499,6 +499,7 @@ button:active {
                     <li><a href="/contact.html">Contact</a></li>
                   <li><a href="https://github.com/arreadev/openbox">GitHub</a></li>
                   <li><a href="https://bsky.app/profile/open-box.bsky.social">BlueSky</a></li>
+                    <li><a href="https://github.com/arreadev/openbox/wiki">Wiki</a></li>
     
                 </a>
             </div>
