--- a/privacy.html
+++ b/privacy.html
@@ -1,1 +1,11 @@
+<!DOCTYPE html>
+<head>
+<title>ERREUR: PAGE EN MAITENANCE</title>
 
+
+  
+</head>
+
+<body>
+  ERREUR: PAGE EN MAITENANCE
+</body>
