--- a/savoir.html
+++ b/savoir.html
@@ -431,6 +431,7 @@ button:active {
 </head>
 
 <body>
+  <script>alert ("Page en cours de créations si vous voulez nous donnez des suggestions contactez nous via https://open-box-web.netlify.app/contact");
    <header>
     
 <img src="/fichiers/logo 2.png" class="logo"> 
