--- a/savoir.html
+++ b/savoir.html
@@ -431,7 +431,17 @@ button:active {
 </head>
 
 <body>
-  <script>alert ("Page en cours de créations si vous voulez nous donnez des suggestions contactez nous via https://open-box-web.netlify.app/contact"); </script>
+<script>
+alert("Page en cours de création, donnez-nous vos suggestions !");
+
+
+    
+    var nom = prompt("Quel est votre suggestion ?");
+    alert("Merci !");
+} else {
+    alert("D'accord, à bientôt !");
+}
+</script>
    <header>
     
 <img src="/fichiers/logo 2.png" class="logo"> 
