--- a/about.html
+++ b/about.html
@@ -282,12 +282,25 @@ header {
   <h1>A propos</h1>
 <h3>OpenBox est un projet français Open Source qui vise à regrouper des compétences, des ressources et autres.</h3>
      <h4>Liens:</h4>
-     <button onclick="window.location.href = 'https://bsky.app/profile/open-box.bsky.social';">BlueSky
+     <button onclick="window.location.href = 'https://bsky.app/profile/open-box.bsky.social';"><button>
+  <span class="shadow"></span>
+  <span class="edge"></span>
+  <span class="front text">BlueSky
+  </span>
+
 </button>
- <button onclick="window.location.href = 'https://github.com/arreadev/openbox';">Github
+ <button onclick="window.location.href = 'https://github.com/arreadev/openbox';"><button>
+  <span class="shadow"></span>
+  <span class="edge"></span>
+  <span class="front text">GitHub
+  </span>
+
 </button>
-</button>
-       <button onclick="window.location.href = 'https://github.com/arreadev/openbox/wiki';">Wiki
+       <button onclick="window.location.href = 'https://github.com/arreadev/openbox/wiki';">
+  <span class="shadow"></span>
+  <span class="edge"></span>
+  <span class="front text"> Wiki
+  </span>
 </button>
 
 </div>
