--- a/savoir.html
+++ b/savoir.html
@@ -517,7 +517,7 @@ button:focus:not(:focus-visible) {
        et open source à Photoshop qui offrent des fonctionnalités<br>
         similaires sans le coût élevé.</p>
      <br>
-<button>
+<button onclick="window.location.href = '/alternativesphotoshop.html';">
   <span class="shadow"></span>
   <span class="edge"></span>
   <span class="front text"> En savoir plus
