--- a/savoir.html
+++ b/savoir.html
@@ -461,7 +461,9 @@ button:active .shadow {
 button:focus:not(:focus-visible) {
  outline: none;
 }
-  
+  .sharemysavoir {
+    left: right; 
+  }
 </style>
 </head>
 
@@ -509,7 +511,9 @@ button:focus:not(:focus-visible) {
    </header>
    <br>
    <div class="content"> 
-    
+     <div class="sharemysavoir">
+    <a href="/savoir/partgermonsavoir.html">+</a>
+     </div>
  <h1>Alternatives à Photoshop</h1>
  <p>Adobe Photoshop est un logiciel de retouche<br>
      d'image très populaire, mais il est également coûteux.<br>
