--- a/savoir.html
+++ b/savoir.html
@@ -462,7 +462,8 @@ button:focus:not(:focus-visible) {
  outline: none;
 }
   .sharemysavoir {
-    left: right; 
+    float: right; 
+    color: white;
   }
 </style>
 </head>
