--- a/savoir.html
+++ b/savoir.html
@@ -513,7 +513,9 @@ button:focus:not(:focus-visible) {
    <br>
    <div class="content"> 
      <div class="sharemysavoir">
-    <a href="/savoir/partgermonsavoir.html">+</a>
+    
+<button onclick="window.location.href = '/savoir/partagermonsavoir.html';">Créer</button>
+
      </div>
  <h1>Alternatives à Photoshop</h1>
  <p>Adobe Photoshop est un logiciel de retouche<br>
