--- a/contact.html
+++ b/contact.html
@@ -322,5 +322,34 @@ header {
 <h3>Adresse Mail: contact.openbox@proton.me</h3>
 
 </div>
-
+<br>
+  <br>
+    <br>
+      <br>
+        <br>
+          <br>
+  <br>
+  <br>
+    <br>
+      <br>
+        <br>
+          <br>
+   <footer class="footer">
+   
+        <div class="footer-content">
+            <nav class="footer-nav">
+                <ul>
+                    <li><a href="/privacy.html">Politique de confidentialité</a></li>
+                    <li><a href="/about.html">À propos</a></li>
+                    <li><a href="/contact.html">Contact</a></li>
+                  <li><a href="https://github.com/arreadev/openbox">GitHub</a></li>
+                  <li><a href="https://bsky.app/profile/open-box.bsky.social">BlueSky</a></li>
+                  <li><a href="https://github.com/arreadev/openbox/wiki">Wiki</a></li>
+    
+                </a>
+            </div>
+                </ul>
+            </nav>
+        </div>
+    </footer>
 </body>
