--- a/privacy.html
+++ b/privacy.html
@@ -335,7 +335,37 @@ OpenBox garantie que les données entrées dans un formulaires peuvent êtres ut
        Si vous avez entré un Pseudonyme, vous pouvez choisir si il sera partagé.</p>
      <h3>4. Contact</h3>
      <p>Pour toute question, demande ou autres, vous pouvez nous contacter à l’adresse:  [contact.openbox@proton.me](mailto:contact.openbox@proton.me)</p>
+    
 
 </div>
-
+<br>
+  <br>
+    <br>
+      <br>
+        <br>
+          <br>
+  <br>
+  <br>
+    <br>
+      <br>
+        <br>
+          <br>
+   <footer class="footer">
+   
+        <div class="footer-content">
+            <nav class="footer-nav">
+                <ul>
+                    <li><a href="/privacy.html">Politique de confidentialité</a></li>
+                    <li><a href="/about.html">À propos</a></li>
+                    <li><a href="/contact.html">Contact</a></li>
+                  <li><a href="https://github.com/arreadev/openbox">GitHub</a></li>
+                  <li><a href="https://bsky.app/profile/open-box.bsky.social">BlueSky</a></li>
+                  <li><a href="https://github.com/arreadev/openbox/wiki">Wiki</a></li>
+    
+                </a>
+            </div>
+                </ul>
+            </nav>
+        </div>
+    </footer>
 </body>
