--- a/privacy.html
+++ b/privacy.html
@@ -334,7 +334,7 @@ La politique de confidentialité de https://tally.so/ s’applique lorsque vous 
 OpenBox garantie que les données entrées dans un formulaires peuvent êtres utilisés si il s’agit de suggestions pour améliorer une page. Les réponses au formulaires “PartagerMonSavoir” peuvent être ajoutées à OpenBox et partagées.<br>
        Si vous avez entré un Pseudonyme, vous pouvez choisir si il sera partagé.</p>
      <h3>4. Contact</h3>
-     <p>Pour toute question, demande ou autres, vous pouvez nous contacter à l’adresse:  [contact.openbox@proton.me](mailto:contact.openbox@proton.me)</p>
+     <p>Pour toute question, demande ou autres, vous pouvez nous contacter à l’adresse: contact.openbox@proton.me</p>
     
 
 </div>
