--- a/privacy.html
+++ b/privacy.html
@@ -241,6 +241,15 @@ header {
   font-size: 26px; 
 }
 
+ /* Style général du footer */
+.footer {
+    background-color: #333; /* Couleur de fond gris foncé */
+    color: white; /* Couleur du texte blanc */
+    padding: 200px 0; /* Espacement interne */
+    text-align: center; /* Centrer le texte */
+  font-size: 26px; 
+}
+
 /* Style du contenu du footer */
 .footer-content {
     max-width: 1200px; /* Largeur maximale du contenu */
@@ -272,6 +281,7 @@ header {
 .footer-nav a:hover {
     color: #ff6347; /* Couleur des liens au survol */
 }
+
 </style>
 </head>
 
