Update and rename savoir.html to savoir/savoir.html

--- a/savoir/savoir.html
+++ b/savoir/savoir.html
@@ -467,6 +467,17 @@ button:active {
   <span class="front text"> En savoir plus
   </span>
 </button>
+     <br>
+      <h1>Créer un formulaire ergonomique</h1>
+ <p>Créer un formulaire peut être très utile
+mais certaines fonctionnalitées ne sont pas disponibles
+sur la plupart des outils de création de formulaires
+c'est pour cette raison que nous vous présentons un nouvel outil.</p>
+     <br>
+<button onclick="window.location.href = '/savoir/tallyforms.html';">
+  <span class="front text"> En savoir plus
+  </span>
+</button>
 </div>
 <br>
   <br>
