--- a/savoir/tallyforms.html
+++ b/savoir/tallyforms.html
@@ -505,7 +505,8 @@ h1 {
 <p>Tally propose énnormement de fonctionnalités mais voici les meilleures: <br>
 -Ajout de formulaire à un site internet<br>
 -Intégrations Notion, Google Sheets, Slack et autres<br>
-Pour accéder à l'outil via notre lien affilié, rendez-vous à cette URL: https://tally.cello.so/TkUFeZRq5f7 </p>
+-Abonnement Gratuit<br>
+Pour accéder à l'outil via notre lien affilié et obtenir 50% de remise sur n'importe quel plan payant durant les 3 premiers mois, rendez-vous à cette URL: https://tally.cello.so/TkUFeZRq5f7 </p>
 
 
   
