--- a/contact.html
+++ b/contact.html
@@ -447,9 +447,9 @@ button:active {
    </header>
    <div class="content">
   <h1>Contactez-Nous</h1>
-<h3>Adresse Mail: contact.openbox@proton.me <br>
-mailto:contact.openbox@proton.me
+<h3>Adresse Mail: contact.openbox@proton.me
 </h3>
+    <a href="mailto:contact.openbox@proton.me">Envoyer un Mail</a>
 
 </div>
 <br>
