--- a/index.html
+++ b/index.html
@@ -485,19 +485,7 @@ button:active {
 
 </button>
 </div>
-<br>
-  <br>
-    <br>
-      <br>
-        <br>
-          <br>
-  <br>
-  <br>
-    <br>
-      <br>
-        <br>
-          <br>
-   <footer class="footer">
+   <footer class="footer" style=" margin: 200em 0 0 0">
    
         <div class="footer-content">
             <nav class="footer-nav">
